Bug 1419959 - Unbreak build on Tier3 platforms after bug 1402519. r=gsvelto

MozReview-Commit-ID: 8NNtuRkfbJe

--HG--
extra : rebase_source : 01f7008135fcc8cb93ae2bdd39b7a2bf23e1c794